<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="32dp"
        android:textColor="#ffa500"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level"
        android:id="@+id/textView"
        android:textSize="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />
    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_x="3px"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:id="@+id/btn_hard"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:id="@+id/btn_easy"

            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/btn_hard"
            android:layout_centerHorizontal="true" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btn_start"
        android:layout_below="@+id/radiogroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/btn_exit"
        android:layout_below="@+id/btn_start"
        android:layout_centerHorizontal="true" />


</RelativeLayout>