<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    android:background="@drawable/background">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/one"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="1"
                android:textSize="50sp" />
            <Button
                android:id="@+id/two"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="2"
                android:textSize="50sp" />
            <Button
                android:id="@+id/three"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="3"
                android:textSize="50sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/four"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="4"
                android:textSize="50sp" />
            <Button
                android:id="@+id/five"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="5"
                android:textSize="50sp" />
            <Button
                android:id="@+id/six"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="6"
                android:textSize="50sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/seven"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="7"
                android:textSize="50sp" />
            <Button
                android:id="@+id/eight"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="8"
                android:textSize="50sp" />
            <Button
                android:id="@+id/nine"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="9"
                android:textSize="50sp" />
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_weight="1.09">
        <TextView
            android:id="@+id/information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="info"
            android:textSize="20sp" >
        </TextView>

        <Button
            android:id="@+id/button_restart"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:textSize="15dp"
            android:onClick="newGame"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
        </Button>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regret"
            android:id="@+id/btn_regret"
            android:layout_gravity="right"
            android:layout_alignTop="@+id/btn_back"
            android:layout_alignStart="@+id/information"
            android:layout_toStartOf="@+id/button_restart" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/back"
            android:id="@+id/btn_back"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/information"
            android:layout_toEndOf="@+id/button_restart" />

    </RelativeLayout>

</LinearLayout>